Fix button overlapping in mobile

--- a/src/app.sass
+++ b/src/app.sass
@@ -60,3 +60,6 @@ body
   body
     padding: 15px
     text-align: center
+
+  .btn-group li
+    display: inline-flex
